--- a/CourseWork/Views/Account/ChangePassword.cshtml
+++ b/CourseWork/Views/Account/ChangePassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CourseWork.ViewModels.Account.ChangePasswordViewModel
 
 @{
-    ViewData["Title"] = "ChangePassword";
+    ViewData["Title"] = @Localizer["ChangePassword"];
 }
 
 <div class="container text-center custom-group-form">
@@ -13,15 +13,15 @@
 		</div>
 
         <div class="mb-3">
-            <input class="form-control" asp-for="NewPassword" placeholder="новый пароль" />
+            <input class="form-control" asp-for="NewPassword" placeholder="@Localizer["NewPassword"]" />
         </div>
 
         <div class="mb-3">
-            <input class="form-control" asp-for="ConfirmPassword" placeholder="повторите новый пароль" />
+            <input class="form-control" asp-for="ConfirmPassword" placeholder="@Localizer["RepeatNewPassword"]" />
         </div>
 
         <div>
-            <button class="btn btn-outline-primary">Сохранить</button>
+            <button class="btn btn-outline-primary">@SharedLocalizer["Save"]</button>
         </div>
     </form>
 </div>
