--- a/CourseWork/Views/Profile/Settings.cshtml
+++ b/CourseWork/Views/Profile/Settings.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CourseWork.ViewModels.Profile.ProfileViewModel
 
 @{
-    ViewData["Title"] = "Settings";
+	ViewData["Title"] = @Localizer["Settings"];
 }
 
 <h2 class="text-center">Настройка профиля</h2>
@@ -24,12 +24,12 @@
 		</div>
 
 		<div class="mb-5">
-			<label asp-for="ImgUrl">Загрузить свой аватар</label>
+			<label asp-for="ImgUrl">@Localizer["UploadAvatar"]</label>
 			<div class="mt-1">
 				<div class='container-form'>
 					<input name="image" id="image" type="text" class="d-none" />
 					<input id='selectedAvatarFile' class="d-none" type='file' accept=".png, .jpg, .jpeg, .svg">
-					<a id="upload-avatar-photo" class="btn-primary btn">Выбрать изображение</a>
+					<a id="upload-avatar-photo" class="btn-primary btn">@SharedLocalizer["UploadImage"]</a>
 				</div>
 				<div class='container-image'>
 					<img id='confirm-img' src=''>
@@ -39,7 +39,7 @@
 					<div class="modal-dialog modal-md modal-dialog-centered">
 						<div class="modal-content modal-content1 modal-content1">
 							<div class="modal-header">
-								<h5 class="modal-title" id="imageModal">Обрезка картинки</h5>
+								<h5 class="modal-title" id="imageModal">@SharedLocalizer["CutImage"]</h5>
 								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 							</div>
 							<div class="modal-body modal-body1">
@@ -47,8 +47,8 @@
 								</div>
 							</div>
 							<div class="modal-footer">
-								<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
-								<button type="button" class="btn btn-primary save-modal">Сохранить</button>
+								<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@SharedLocalizer["Cancel"]</button>
+								<button type="button" class="btn btn-primary save-modal">@SharedLocalizer["Save"]</button>
 							</div>
 						</div>
 					</div>
@@ -57,7 +57,7 @@
 		</div>
 
 		<div>
-			<button class="btn btn-outline-primary" type="submit">Сохранить</button>
+			<button class="btn btn-outline-primary" type="submit">@SharedLocalizer["Save"]</button>
 		</div>
 	</form>
 </div>
