--- a/CourseWork/Views/Shared/CollectionPartial.cshtml
+++ b/CourseWork/Views/Shared/CollectionPartial.cshtml
@@ -12,8 +12,8 @@
 
         <div class="card-body">
             <h5 class="card-title">@Model.Title</h5>
-            <div class="d-flex align-items-end">
-                <a href="/Collection/GetCollection/@Model.Id" class="btn btn-primary">Посмотреть коллекцию</a>
+            <div class="d-flex align-items-end mt-3">
+                <a href="/Collection/GetCollection/@Model.Id" class="btn btn-primary">@SharedLocalizer["ViewCollection"]</a>
             </div>
         </div>
     </div>
