--- a/CourseWork/Views/Shared/ItemPartial.cshtml
+++ b/CourseWork/Views/Shared/ItemPartial.cshtml
@@ -12,10 +12,10 @@
 			<div class="gallery-item-info">
 				<ul>
 					<li class="gallery-item-likes">
-						<span class="visualy-hidden">Likes: <i class="fa-solid fa-heart"></i> @Model.LikesCount</span>
+						<span class="visualy-hidden">@Localizer["Likes"]: <i class="fa-solid fa-heart"></i> @Model.LikesCount</span>
 					</li>
 					<li class="gallery-items-comments">
-						<span class="visualy-hidden">Comments: <i class="fa-solid fa-comment"></i> @Model.CommentsCount</span>
+						<span class="visualy-hidden">@Localizer["Comments"]: <i class="fa-solid fa-comment"></i> @Model.CommentsCount</span>
 					</li>
 				</ul>
 			</div>
