--- a/CourseWork/Views/Shared/PaginationPartial.cshtml
+++ b/CourseWork/Views/Shared/PaginationPartial.cshtml
@@ -47,7 +47,7 @@
 		</a>
 	</div>
 	<div>
-		<p>Страница: @Model.PageNumber из @Model.TotalPages</p>
+		<p>@SharedLocalizer["Page"]: @Model.PageNumber - @Model.TotalPages</p>
 	</div>
 </div>
 
