--- a/CourseWork/Views/Account/Login.cshtml
+++ b/CourseWork/Views/Account/Login.cshtml
@@ -1,29 +1,29 @@
 ﻿@model CourseWork.ViewModels.Account.LoginViewModel
 
 @{
-	ViewData["Title"] = "Login";
+	ViewData["Title"] = @Localizer["SignIn"];
 }
 
-<h2 class="text-center">Вход на сайт</h2>
+<h2 class="text-center">@Localizer["SignIn"]</h2>
 
 <div class="container text-center custom-group-form">
 	<form asp-action="Login" asp-controller="Account" asp-anti-forgery="true">
 		<div class="validation" asp-validation-summary="All"></div>
 
 		<div class="mb-3">
-			<label asp-for="Name">Введите логин</label><br />
-			<input class="form-control" type="text" asp-for="Name" placeholder="Имя" />
+			<label asp-for="Name">@Localizer["EnterLogin"]</label><br />
+			<input class="form-control" type="text" asp-for="Name" placeholder="@Localizer["Name"]" />
 		</div>
 		<div class="mb-3">
-			<label asp-for="Password">Введите пароль</label><br />
-			<input class="form-control" asp-for="Password" placeholder="пароль" />
+			<label asp-for="Password">@Localizer["EnterPassword"]</label><br />
+			<input class="form-control" asp-for="Password" placeholder="@Localizer["Password"]" />
 		</div>
 
 		<div>
-			<button class="btn btn-outline-primary" type="submit">Войти</button>
+			<button class="btn btn-outline-primary" type="submit">@Localizer["SignIn"]</button>
 		</div>
 
 	</form>
-	<p>Нет аккаунта? - <a asp-action="Register" asp-controller="Account">создайте его</a>!</p>
+	<p>@Localizer["NoAccount"]? - <a asp-action="Register" asp-controller="Account">@Localizer["CreateIt"]</a>!</p>
 </div>
 
