--- a/CourseWork/Views/Account/Register.cshtml
+++ b/CourseWork/Views/Account/Register.cshtml
@@ -1,29 +1,29 @@
 ﻿@model CourseWork.ViewModels.Account.RegisterViewModel
 @{
-	ViewData["Title"] = "Register";
+	ViewData["Title"] = @Localizer["SignUp"];
 }
-<h2 class="text-center">Регистрация</h2>
+<h2 class="text-center">@Localizer["SignUp"]</h2>
 
 <div class="container text-center custom-group-form">
 	<form asp-action="Register" asp-controller="Account" asp-anti-forgery="true">
 		<div class="validation" asp-validation-summary="All"></div>
 
 		<div class="mb-3">
-			<label asp-for="Name">Введите логин</label><br />
-			<input class="form-control" type="text" asp-for="Name" placeholder="Имя" />
+			<label asp-for="Name">@Localizer["EnterLogin"]</label><br />
+			<input class="form-control" type="text" asp-for="Name" placeholder="@Localizer["Name"]" />
 		</div>
 		<div class="mb-3">
-			<label asp-for="Password">Введите пароль</label><br />
-			<input class="form-control" asp-for="Password" placeholder="Пароль" />
+			<label asp-for="Password">@Localizer["EnterPassword"]</label><br />
+			<input class="form-control" asp-for="Password" placeholder="@Localizer["Password"]" />
 		</div>
 		<div class="mb-3">
-			<label asp-for="ConfirmPassword">Повторите пароль</label><br />
-			<input class="form-control" asp-for="ConfirmPassword" placeholder="Повторите пароль" />
+			<label asp-for="ConfirmPassword">@Localizer["ConfirmPassword"]</label><br />
+			<input class="form-control" asp-for="ConfirmPassword" placeholder="@Localizer["ConfirmPassword"]" />
 		</div>
 
 		<div>
-			<button class="btn btn-outline-primary" type="submit">Регистрация</button>
+			<button class="btn btn-outline-primary" type="submit">@Localizer["SignUp"]</button>
 		</div>
 	</form>
-	<p>Уже есть аккаунт? - <a asp-action="Login" asp-controller="Account">авторизуйтесь</a>!</p>
+	<p>@Localizer["AlreadyHaveAccount"]? - <a asp-action="Login" asp-controller="Account">@Localizer["LogIn"]</a>!</p>
 </div>
