--- a/CourseWork/Views/Admin/Index.cshtml
+++ b/CourseWork/Views/Admin/Index.cshtml
@@ -1,30 +1,30 @@
 ﻿@model IEnumerable<CourseWork.ViewModels.Admin.UserViewModel>
 
 @{
-	ViewData["Title"] = "AdminPage";
+	ViewData["Title"] = @Localizer["AdminPage"];
 }
 
 <div class="container text-center">
 	<form asp-action="UsersForm" asp-controller="Admin" method="post">
-		<button class="btn btn-outline-success" name="type" value="Unlock">Unlock</button>
-		<button class="btn btn-outline-warning" name="type" value="Block">Block</button>
-		<button class="btn btn-outline-warning" name="type" value="AddToAdmin">Add to admin</button>
-		<button class="btn btn-outline-danger" name="type" value="RemoveFromAdmin">Remove from admin</button>
-		<button class="btn btn-outline-danger" name="type" value="Delete">Delete</button><br /><br />
+		<button class="btn btn-outline-success" name="type" value="Unlock">@Localizer["Unlock"]</button>
+		<button class="btn btn-outline-warning" name="type" value="Block">@Localizer["Block"]</button>
+		<button class="btn btn-outline-warning" name="type" value="AddToAdmin">@Localizer["AddtoAdmin"]</button>
+		<button class="btn btn-outline-danger" name="type" value="RemoveFromAdmin">@Localizer["RemoveFromAdmin"]</button>
+		<button class="btn btn-outline-danger" name="type" value="Delete">@Localizer["Delete"]</button><br /><br />
 
 		<div style="overflow: auto;">
 			<table class="table table-sm">
 				<thead>
 					<tr>
 						<th scope="col">
-							<label class="form-check-label" for="selectAll">Выбрать все </label>
+							<label class="form-check-label" for="selectAll">@Localizer["SelectAll"] </label>
 							<input id="selectAll" class="form-check-input" type="checkbox" onClick="toggle(this)" />
 						</th>
-						<th scope="col">ID</th>
-						<th scope="col">Имя</th>
-						<th scope="col">Дата регистрации</th>
-						<th scope="col">Статус</th>
-						<th scope="col">Роль</th>
+						<th scope="col">Id</th>
+						<th scope="col">@Localizer["Name"]</th>
+						<th scope="col">@Localizer["RegistrationDate"]</th>
+						<th scope="col">@Localizer["Status"]</th>
+						<th scope="col">@Localizer["Role"]</th>
 					</tr>
 				</thead>
 				<tbody>
