--- a/CourseWork/Views/Collection/EditCollection.cshtml
+++ b/CourseWork/Views/Collection/EditCollection.cshtml
@@ -2,34 +2,34 @@
 @model CourseWork.ViewModels.Collection.EditCollectionViewModel
 
 @{
-	ViewData["Title"] = "Редактирование коллекции";
+	ViewData["Title"] = @Localizer["EditCollection"];
 }
 
-<h1 class="text-center mt-5">Редактирование коллекции</h1>
+<h1 class="text-center mt-5">@Localizer["EditCollection"]</h1>
 <div class="container">
 	<form asp-action="EditCollection" asp-controller="Collection" enctype="multipart/form-data" method="post">
 		<div class="mb-2">
 			<div class="validation" asp-validation-summary="All"></div>
 
 			<fieldset class="mb-3">
-				<legend>Основная информация</legend>
+				<legend>@Localizer["MainInfo"]</legend>
 
 				<div class="row m-0 mb-2">
-					<label asp-for="Title" class="col-12 col-md-4">Название коллекции</label>
+					<label asp-for="Title" class="col-12 col-md-4">@Localizer["CollectionName"]</label>
 					<div class="col-12 col-md-8">
-						<input class="form-control" asp-for="Title" placeholder="Название коллекции" />
+						<input class="form-control" asp-for="Title" placeholder="@Localizer["CollectionName"]" />
 					</div>
 				</div>
 
 				<div class="row m-0 mb-2">
-					<label asp-for="Description" class="col-12 col-md-4">Описание коллекции</label>
+					<label asp-for="Description" class="col-12 col-md-4">@Localizer["CollectionDescription"]</label>
 					<div class="col-12 col-md-8">
 						<textarea asp-for="Description"></textarea>
 					</div>
 				</div>
 
 				<div class="row m-0 mb-2">
-					<label asp-for="Theme" class="col-12 col-md-4">Тема коллекции</label><br />
+					<label asp-for="Theme" class="col-12 col-md-4">@Localizer["CollectionTheme"]</label><br />
 					<div class="col-12 col-md-8">
 						<select class="form-control" asp-for="Theme">
 							<option value="Books">Books</option>
@@ -44,15 +44,15 @@
 			</fieldset>
 
 			<fieldset class="mb-3">
-				<legend>Обложка</legend>
+				<legend>@SharedLocalizer["Cover"]</legend>
 
 				<div class="row m-0 mb-2">
-					<label class="col-12 col-md-4">Обложка коллекции</label>
+					<label class="col-12 col-md-4">@Localizer["CollectionCover"]</label>
 					<div class="col-12 col-md-8">
 						<div class='container-form'>
 							<input name="image" id="image" type="text" class="d-none" />
 							<input id='selectedFile' class="d-none" type='file' accept=".png, .jpg, .jpeg, .svg">
-							<a id="upload-aphoto" class="btn-primary btn">Выбрать изображение</a>
+							<a id="upload-aphoto" class="btn-primary btn">@SharedLocalizer["UploadImage"]</a>
 						</div>
 						<div class='container-image'>
 							<img id='confirm-img' src=''>
@@ -62,7 +62,7 @@
 							<div class="modal-dialog modal-md modal-dialog-centered">
 								<div class="modal-content modal-content1 modal-content1">
 									<div class="modal-header">
-										<h5 class="modal-title" id="imageModal">Обрезка картинки</h5>
+										<h5 class="modal-title" id="imageModal">@SharedLocalizer["CutImage"]</h5>
 										<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 									</div>
 									<div class="modal-body modal-body1">
@@ -70,8 +70,8 @@
 										</div>
 									</div>
 									<div class="modal-footer">
-										<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
-										<button type="button" class="btn btn-primary save-modal">Сохранить</button>
+										<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@SharedLocalizer["Cancel"]</button>
+										<button type="button" class="btn btn-primary save-modal">@SharedLocalizer["Save"]</button>
 									</div>
 								</div>
 							</div>
@@ -81,13 +81,13 @@
 			</fieldset>
 
 			<fieldset class="mb-3">
-				<legend>Теги</legend>
+				<legend>@SharedLocalizer["Tags"]</legend>
 
 				<div class="container">
 					<div class="d-flex justify-content-center pt-3">
 						<div class="d-flex m-0 mb-2">
-							<input class="form-control me-2" type="text" id="tagInput" placeholder="введите тег" />
-							<div class="btn btn-primary ms-2 my-cursor" id="addTag">add</div>
+							<input class="form-control me-2" type="text" id="tagInput" placeholder="@Localizer["EnterTag"]" />
+							<div class="btn btn-primary ms-2 my-cursor" id="addTag">@SharedLocalizer["Add"]</div>
 						</div>
 					</div>
 					<div class="d-flex flex-column flex-sm-row">
@@ -97,7 +97,7 @@
 								{
 									<div class='d-flex justify-content-between m-2'>
                                         <input type='text' name='includedTags' class='m-1 readonly-input' value='@item' readonly />
-                                        <div class='btn btn-danger m-1 my-cursor' id='remove'>remove</div>
+										<div class='btn btn-danger m-1 my-cursor' id='remove'>@SharedLocalizer["Remove"]</div>
 									</div>
 								}
 							</div>
@@ -108,7 +108,7 @@
 		</div>
 
 		<fieldset style="padding: 20px;" class="mt-3 mb-3">
-			<legend>Айтемы</legend>
+			<legend>@SharedLocalizer["Items"]</legend>
 
 			@{
 				var items = ViewData["Items"] as List<ItemViewModel> ?? new List<ItemViewModel>();
@@ -119,11 +119,11 @@
 					<table class="table table-sm">
 						<thead>
 							<tr>
-								<th scope="col">Выбрать</th>
-								<th scope="col">Название айтема</th>
-								<th scope="col">Автор</th>
-								<th scope="col">Содержание</th>
-								<th scope="col">Дата создания</th>
+								<th scope="col">@Localizer["Select"]</th>
+								<th scope="col">@Localizer["ItemName"]</th>
+								<th scope="col">@Localizer["Author"]</th>
+								<th scope="col">@Localizer["Content"]</th>
+								<th scope="col">@Localizer["CreationDate"]</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -146,13 +146,13 @@
 			}
 			else
 			{
-				<p>Нет доступных айтемов <a class="link-info" href="/Item/CreateItem">Создать</a></p>
+				<p>@Localizer["NoItemsAvailable"] <a class="link-info" href="/Item/CreateItem">@Localizer["Create"]</a></p>
 			}
 		</fieldset>
 
 		<div class="d-flex justify-content-center mt-3">
-			<button class="btn btn-outline-primary me-2">Сохранить</button>
-			<a class="btn btn-outline-danger ms-3" href="/Collection/DeleteCollection/@Model.Id">Удалить</a>
+			<button class="btn btn-outline-primary me-2">@SharedLocalizer["Save"]</button>
+			<a class="btn btn-outline-danger ms-3" href="/Collection/DeleteCollection/@Model.Id">@SharedLocalizer["Delete"]</a>
 		</div>
 
 	</form>
@@ -189,7 +189,7 @@
 
 				$("#tagInput").val("");
 			} else {
-				alert("Тег не должен содержать символ '#'");
+				alert(@Localizer["TagMustNotContainTheSymbol"] + "'#'");
 			}
 		});
 
