--- a/CourseWork/Views/Collection/MyCollections.cshtml
+++ b/CourseWork/Views/Collection/MyCollections.cshtml
@@ -2,7 +2,7 @@
 @model IEnumerable<CourseWork.ViewModels.Collection.CollectionViewModel>
 
 @{
-    ViewData["Title"] = "MyCollections";
+	ViewData["Title"] = @Localizer["MyCollections"];
 }
 
 @{
@@ -17,7 +17,7 @@
 
 @if (Model.Any())
 {
-	<h1 class="text-center m-4">Мои коллекции</h1>
+	<h1 class="text-center m-4">@Localizer["MyCollections"]</h1>
 	<div class="row">
 		@foreach (var col in collections)
 		{
@@ -30,7 +30,7 @@
 }
 else
 {
-	<h3 class="text-center">Ничего не найдено</h3>
+	<h3 class="text-center">@SharedLocalizer["NothingFound"]</h3>
 } 
 
 @section Scripts {
