--- a/CourseWork/Views/Item/EditItem.cshtml
+++ b/CourseWork/Views/Item/EditItem.cshtml
@@ -1,35 +1,35 @@
 ﻿@model CourseWork.ViewModels.Item.EditItemViewModel
 
 @{
-	ViewData["Title"] = "EditItem";
+	ViewData["Title"] = @Localizer["EditItem"];
 }
 
-<h1 class="text-center">Редактирование айтема</h1>
+<h1 class="text-center">@Localizer["EditItem"]</h1>
 <div class="container">
 	<form asp-action="EditItem" asp-controller="Item" enctype="multipart/form-data" method="post">
 		<div class="validation" asp-validation-summary="All"></div>
 
 		<div class="row m-0 mb-3">
-			<label asp-for="Title" class="col-12 col-md-4">Название коллекции</label>
+			<label asp-for="Title" class="col-12 col-md-4">@Localizer["ItemName"]</label>
 			<div class="col-12 col-md-8">
-				<input class="form-control" type="text" asp-for="Title" placeholder="Название айтема" />
+				<input class="form-control" type="text" asp-for="Title" placeholder="@Localizer["ItemName"]" />
 			</div>
 		</div>
 
 		<div class="row m-0 mb-3">
-			<label asp-for="Description" class="col-12 col-md-4">Описание коллекции</label>
+			<label asp-for="Description" class="col-12 col-md-4">@Localizer["ItemDescription"]</label>
 			<div class="col-12 col-md-8">
 				<textarea asp-for="Description"></textarea>
 			</div>
 		</div>
 
 		<div class="row m-0 mb-3">
-			<label class="col-12 col-md-4">Обложка айтема</label>
+			<label class="col-12 col-md-4">@Localizer["ItemCover"]</label>
 			<div class="col-12 col-md-8">
 				<div class='container-form'>
 					<input name="image" id="image" type="text" class="d-none" />
 					<input id='selectedFile' class="d-none" type='file' accept=".png, .jpg, .jpeg, .svg">
-					<a id="upload-aphoto" class="btn-primary btn">Выбрать изображение</a>
+					<a id="upload-aphoto" class="btn-primary btn">@SharedLocalizer["UploadImage"]</a>
 				</div>
 				<div class='container-image'>
 					<img id='confirm-img' src=''>
@@ -39,7 +39,7 @@
 					<div class="modal-dialog modal-md modal-dialog-centered">
 						<div class="modal-content modal-content1 modal-content1">
 							<div class="modal-header">
-								<h5 class="modal-title" id="imageModal">Обрезка картинки</h5>
+								<h5 class="modal-title" id="imageModal">@SharedLocalizer["CutImage"]</h5>
 								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 							</div>
 							<div class="modal-body modal-body1">
@@ -47,8 +47,8 @@
 								</div>
 							</div>
 							<div class="modal-footer">
-								<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
-								<button type="button" class="btn btn-primary save-modal">Сохранить</button>
+								<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@SharedLocalizer["Cancel"]</button>
+								<button type="button" class="btn btn-primary save-modal">@SharedLocalizer["Save"]</button>
 							</div>
 						</div>
 					</div>
@@ -57,8 +57,8 @@
 		</div>
 
 		<div class="d-flex justify-content-center">
-			<button class="btn btn-outline-primary me-2">Сохранить</button>
-			<a class="btn btn-outline-danger ms-2" href="/Item/DeleteItem/@Model.Id">Удалить</a>
+			<button class="btn btn-outline-primary me-2">@SharedLocalizer["Save"]</button>
+			<a class="btn btn-outline-danger ms-2" href="/Item/DeleteItem/@Model.Id">@SharedLocalizer["Delete"]</a>
 		</div>
 
 	</form>
