--- a/CourseWork/Views/Shared/_Layout.cshtml
+++ b/CourseWork/Views/Shared/_Layout.cshtml
@@ -20,10 +20,12 @@
 				<div class="navbar-collapse collapse d-sm-inline-flex">
 					<ul class="navbar-nav flex-grow-1">
 						<li class="nav-item">
-							<a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Главная страница</a>
+							<a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">@SharedLocalizer["HomePage"]</a>
 						</li>
 					</ul>
 					
+                    <partial name="_LanguagePartial" >
+
 					<div class="me-3" style="font-size: 22px;">
 						<i style="cursor: pointer;" id="theme"></i>
 					</div>
