--- a/CourseWork/Views/Shared/_LoginPartial.cshtml
+++ b/CourseWork/Views/Shared/_LoginPartial.cshtml
@@ -5,15 +5,15 @@
 			<i class="fa-solid fa-ellipsis-vertical"></i>
 		</button>
 		<ul class="dropdown-menu dropdown-menu-lg-end">
-			<li><a class="dropdown-item me-2" href="/Profile"><i class="fa-solid fa-user"></i> Профиль</a></li>
-			<li><a class="dropdown-item me-2" href="/Account/Logout"><i class="fa-sharp fa-solid fa-arrow-right-from-bracket"></i> Выход</a></li>
+			<li><a class="dropdown-item me-2" href="/Profile"><i class="fa-solid fa-user"></i> @SharedLocalizer["Profile"]</a></li>
+			<li><a class="dropdown-item me-2" href="/Account/Logout"><i class="fa-sharp fa-solid fa-arrow-right-from-bracket"></i> @SharedLocalizer["LogOut"]</a></li>
 		</ul>
 	</div>
 }
 else
 {
 	<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-		<li class="nav-item"><a class="nav-link" asp-controller="Account" asp-action="Register">Регистрация</a></li>
-		<li class="nav-item"><a class="nav-link" asp-controller="Account" asp-action="Login">Войти</a></li>
+		<li class="nav-item"><a class="nav-link" asp-controller="Account" asp-action="Register">@SharedLocalizer["SignUp"]</a></li>
+		<li class="nav-item"><a class="nav-link" asp-controller="Account" asp-action="Login">@SharedLocalizer["SignIn"]</a></li>
 	</ul>
 }
