--- a/CourseWork/Views/_ViewImports.cshtml
+++ b/CourseWork/Views/_ViewImports.cshtml
@@ -1,2 +1,5 @@
 ﻿@using CourseWork
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+@inject IHtmlLocalizer<SharedResource> SharedLocalizer
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
